kubelabs/networkPolicy/be_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
